[tool.poetry]
name = "derive-client"
version = "0.2.28"
description = ""
authors = ["8baller <8baller@station.codes>"]
readme = "README.md"
packages = [{ include = "derive_client" }]

[tool.poetry.dependencies]
python = ">=3.10,<=3.12"
requests = "^2"
web3 = { version = ">=6,<8" }
websocket-client = ">=0.32.0,<1"
setuptools = ">=68.2.2,<80"
rich-click = "^1.7.1"
python-dotenv = ">=0.14.0,<2"
pandas = ">=1,<=3"
eth-account = ">=0.13"
derive-action-signing = "^0.0.13"
pydantic = "^2.11.3"
aiolimiter = "^1.2.1"
returns = "^0.26.0"

[tool.poetry.scripts]
drv = "derive_client.cli:cli"
fetch-drv-abis = "derive_client.utils.abi:download_prod_address_abis"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
tbump = "^6.11.0"
pytest-rerunfailures = "^13.0"
semver = ">=2.9.1,<3.0.0"
numpy = "<2"

mkdocs = "^1.3.1"
mkdocs-include-markdown-plugin = "^3.6.1"
mkdocs-material = "^8.4.0"
mkdocs-material-extensions = "^1.0.3"
mkdocs-autorefs = "^0.4.1"
ruff = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120
target-version = "py313"
respect-gitignore = true
extend-exclude = [
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".tox",
  ".venv",
  "_build",
  "buck-out",
  "build",
  "dist",
  "docs/conf.py",
]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
#  "B",   # flake8-bugbear
#  "UP",  # pyupgrade
#  "C4",  # flake8-comprehensions
#  "SIM", # flake8-simplify
#  "PT",  # flake8-pytest-style (if you use pytest)
#  "RUF", # Ruff-specific rules
]
ignore = ["E501"]

[tool.ruff.lint.isort]
split-on-trailing-comma = true

[tool.ruff.format]
# Replace Black
line-ending = "auto"
quote-style = "preserve"
indent-style = "space"
skip-magic-trailing-comma = false

